--- a/popup.html
+++ b/popup.html
@@ -2,21 +2,75 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="color-scheme" content="light dark" />
         <style>
-            body {
-                font-family: system-ui, sans-serif;
-                padding: 12px;
-                width: 260px;
+            :root {
+                --bg: #ffffff;
+                --fg: #0f172a;
+                --muted: #64748b;
+                --primary: #2563eb;
+                --primary-hover: #1d4ed8;
+                --ring: #93c5fd;
             }
+
+            @media (prefers-color-scheme: dark) {
+                :root {
+                    --bg: #0b1220;
+                    --fg: #e5e7eb;
+                    --muted: #94a3b8;
+                    --primary: #3b82f6;
+                    --primary-hover: #1d4ed8;
+                    --ring: #1e40af66;
+                }
+            }
+
+            body {
+                font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji", sans-serif;
+                margin: 0;
+                padding: 14px 14px 12px;
+                width: 280px;
+                background: var(--bg);
+                color: var(--fg);
+            }
+
+            h2 {
+                margin: 0 0 12px 0;
+                font-size: 16px;
+                font-weight: 600;
+                letter-spacing: 0.2px;
+            }
+
             button {
                 width: 100%;
-                padding: 10px;
+                padding: 10px 12px;
                 font-size: 14px;
+                font-weight: 600;
+                border-radius: 8px;
+                background: var(--primary);
+                color: #fff;
+                border: 1px solid transparent;
+                cursor: pointer;
+                transition: background-color 120ms ease, box-shadow 120ms ease, transform 10ms ease;
             }
+
+            button:hover {
+                background: var(--primary-hover);
+            }
+
+            button:active {
+                transform: translateY(1px);
+            }
+
+            button:focus-visible {
+                outline: none;
+                box-shadow: 0 0 0 3px var(--ring);
+            }
+
             .hint {
-                color: #666;
+                color: var(--muted);
                 font-size: 12px;
-                margin-top: 8px;
+                margin-top: 10px;
+                line-height: 1.35;
             }
         </style>
     </head>
